fixed issue with book description being off center

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ code {
   margin-right: 1em;
 }
 
+.book-info {
+  width: 100%;
+}
+
 .error {
   font-size: 2em;
   font-weight: bold;
